--- a/spatula_project/static/css/index.css
+++ b/spatula_project/static/css/index.css
@@ -126,7 +126,7 @@ input{
 	}
 }
 
-@media screen and (max-device-width: 1024px) and (orientation: portrait){
+@media screen and (max-device-width: 1024px){
 	.recipe {
 		float: left;
 		width: 100%;
